--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="cabecalho">
 <h2>cabeçalho</h2>
-<a href="" target="_blank" class="boton">Acesse</a>
+<a href="https://www.brasildefato.com.br/" target="_blank" class="boton">Acesse</a>
   </div>
 
   <div class="corpo">
