--- a/index.html
+++ b/index.html
@@ -33,5 +33,27 @@
   <div class="footer">
 <h3>contatos</h3>
   </div>
+
+  <div class="grid-container">
+    <div class="grid-item">
+        <img src="https://via.placeholder.com/300" alt="Foto 1">
+    </div>
+    <div class="grid-item">
+        <img src="https://via.placeholder.com/300" alt="Foto 2">
+    </div>
+    <div class="grid-item">
+        <img src="https://via.placeholder.com/300" alt="Foto 3">
+    </div>
+    <div class="grid-item">
+        <img src="https://via.placeholder.com/300" alt="Foto 4">
+    </div>
+    <div class="grid-item">
+        <img src="https://via.placeholder.com/300" alt="Foto 5">
+    </div>
+    <div class="grid-item">
+        <img src="https://via.placeholder.com/300" alt="Foto 6">
+    </div>
+</div>
+
 </body>
 </html>
